<resources>
    <string name="app_name">BusiCard</string>
    <string name="title_card_detail">Card Detail</string>
    <string name="card_detail_photo">Photo</string>

    <string name="card_detail_up">Up</string>

    <string name="card_detail_hint_name">Add contact name</string>
    <string name="card_detail_hint_company_name">Add company name</string>
    <string name="card_detail_hint_telephone">Add telephone number</string>
    <string name="card_detail_hint_email">Add email address</string>
    <string name="card_detail_hint_location">Add company location</string>
    <string name="card_detail_hint_share">Share contact</string>
    <string name="card_detail_hint_scan">Scan card photo</string>
    <string name="card_detail_hint_photo">Take a photo</string>
    <string name="card_list_delete_msg">Delete the card?</string>
    <string name="card_list_delete_msg_yes">Yes</string>
    <string name="card_list_delete_msg_no">No</string>
    <string name="card_detail_back_msg">Discard Card? (Take a photo for saving)</string>
    <string name="card_list_activity_hello">Hello to</string>
    <string name="no_activities">No Cards</string>
</resources>
