<com.esguti.busicard.ui.DrawInsetsFrameLayout
    android:id="@+id/card_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_detail_appbar"
            app:elevation="@dimen/card_detail_appbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:windowTranslucentStatus="true"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/card_detail_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_collapseMode="parallax"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fitsSystemWindows="true">
                    <!--suppress AndroidLintContentDescription -->

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/card_detail_photo"
                        android:src="@drawable/example_card_view"/>

                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/card_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:elevation="@dimen/card_detail_fragment_toolbar_elevation"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:fitsSystemWindows="true"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.esguti.busicard.ui.MaxWidthLinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="@dimen/card_detail_card_max_width"
                android:background="@android:color/white"
                android:elevation="@dimen/elevation_low"
                android:paddingTop="@dimen/fab_margin">

                <EditText
                    android:id="@+id/card_detail_name"
                    style="@style/card_detail_info"
                    android:hint="@string/card_detail_hint_name"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="3dp"/>

                <EditText
                    android:id="@+id/card_detail_company_name"
                    style="@style/card_detail_info"
                    android:hint="@string/card_detail_hint_company_name"
                    android:drawableLeft="@drawable/ic_domain_black_24dp"
                    android:drawablePadding="3dp"/>

                <EditText
                    android:id="@+id/card_detail_telephone"
                    style="@style/card_detail_info"
                    android:hint="@string/card_detail_hint_telephone"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="3dp"/>

                <EditText
                    android:id="@+id/card_detail_email"
                    style="@style/card_detail_info"
                    android:hint="@string/card_detail_hint_email"
                    android:drawableLeft="@drawable/ic_mail_black_24dp"
                    android:drawablePadding="3dp"/>

                <EditText
                    android:id="@+id/card_detail_location"
                    style="@style/card_detail_info"
                    android:hint="@string/card_detail_hint_location"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="3dp"/>

            </com.esguti.busicard.ui.MaxWidthLinearLayout>

        </android.support.v4.widget.NestedScrollView>



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/card_detail_fab_share"
            style="@style/AppTheme"
            android:elevation="@dimen/elevation_low"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_share_black_24dp"
            app:layout_anchor="@+id/card_detail_appbar"
            app:layout_anchorGravity="top|end"
            android:hint="@string/card_detail_hint_share"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/card_detail_fab_scan"
            style="@style/AppTheme"
            android:elevation="@dimen/elevation_low"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_scanner_black_24dp"
            app:layout_anchor="@+id/card_detail_appbar"
            app:layout_anchorGravity="bottom|end"
            android:hint="@string/card_detail_hint_scan"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/card_detail_fab_photo"
            style="@style/AppTheme"
            android:elevation="@dimen/elevation_low"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_camera_alt_black_24dp"
            app:layout_anchor="@+id/card_detail_appbar"
            app:layout_anchorGravity="bottom|start"
            android:hint="@string/card_detail_hint_photo"/>


    </android.support.design.widget.CoordinatorLayout>

</com.esguti.busicard.ui.DrawInsetsFrameLayout>
